# OpenGLScene

./: CMakeLists.txt
src/: main.cpp
src/render/: CMakeLists.txt  SandBox.cpp  SandBox.hpp
src/shader/: CMakeLists.txt  Shader.cpp  Shader.hpp
src/utils/: CMakeLists.txt  glad.c
